# pet-id

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  params.cpu.yaml  params.mps.yaml  params.yaml  pyproject.toml
.github/workflows/: ci.yml  no-wandb-residue.yml
docs/: architecture.md
docs/superpowers/plans/: 2026-04-21-pet-id-first-round-plan.md
docs/superpowers/specs/: 2026-04-21-pet-id-first-round-design.md
src/pet_id_registry/: __init__.py  card.py  cli.py  enroll.py  library.py  protocols.py
src/pet_id_registry/backends/: __init__.py  osnet_embedder.py
src/purrai_core/: __init__.py  config.py  types.py
src/purrai_core/backends/: bytetrack_tracker.py  mmpose_pose.py  osnet_reid.py  pose_schema.py  qwen2vl_narrative.py  yolov10_detector.py
src/purrai_core/interfaces/: detector.py  narrative.py  pose.py  reid.py  tracker.py
src/purrai_core/pipelines/: full_pipeline.py
src/purrai_core/stitch/: __init__.py  id_stitch.py
src/purrai_core/utils/: __init__.py  logging.py  retry.py  video_io.py
tests/: conftest.py  test_config.py  test_version.py
tests/backends/: __init__.py  test_bytetrack_tracker.py  test_mmpose_pose.py  test_osnet_reid.py  test_qwen2vl_narrative.py  test_yolov10_detector.py
tests/interfaces/: __init__.py  test_detector_contract.py  test_narrative_contract.py  test_pose_contract.py  test_reid_contract.py  test_tracker_contract.py
tests/pet_id_registry/: conftest.py  test_card.py  test_cli_identify.py  test_cli_list_show_delete.py  test_cli_register.py  test_enroll_crop.py  test_enroll_photos.py  test_enroll_video.py  test_library_crud.py  test_library_identify.py  test_osnet_embedder.py
tests/pipelines/: test_async_narrative.py  test_full_pipeline.py  test_parallel_reid_pose.py
tests/stitch/: test_id_stitch.py
tests/utils/: test_logging.py  test_retry.py  test_video_io.py
